--- a/.github/workflows/prepare_release.yml
+++ b/.github/workflows/prepare_release.yml
@@ -51,5 +51,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           tags: true
-          github_token: ${{ secrets.PAT}}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
